--- a/src/components/gamePage4/GameBoard.css
+++ b/src/components/gamePage4/GameBoard.css
@@ -1,20 +1,38 @@
 .gameboard{
+  width: 26rem;
+  height: fit-content;
+  padding: 1rem;
+  display: grid;
+  justify-content: space-around;
+  grid-template-columns: repeat(3,auto);
+  gap: 2rem;
   border-radius: 12px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
 }
-.hor{
-  width: 25rem;
-  height: 6rem;
-  padding: 1rem;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
 
-}
-
-.hor p{
+.gameboard p{
   width: 6rem;
   height: 6rem;
   border-radius: 12px;
   background-color: #6F00FF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation-name: rotateCard;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-play-state: paused;
+}
+
+.gameboard p img{
+  display: none;
+}
+
+@keyframes rotateCard {
+  0%{
+    transform: rotateY(0deg);
+  }
+  100%{
+    transform: rotateY(360deg);
+  }
 }
